# fluffy-spoon

./: .clang-format  CMakeLists.txt
include/: Block.h  BlockChain.h  HashUtil.h  Wallet.h
src/: Block.cpp  BlockChain.cpp  HashUtil.cpp  Wallet.cpp  main.cpp
